templates/kustomize/cluckin-bell-app/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluckin-bell-app
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: cluckin-bell-app
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
